--- a/Python/assignment/1일차/Ch04_task.ipynb
+++ b/Python/assignment/1일차/Ch04_task.ipynb
@@ -91,7 +91,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3번 타입을 지정할 때 ()로 감싸서 무엇의 타입을 지정할지 정해줘야합니다."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,9 +120,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((3*7-16)/2-1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1.5입니다."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +173,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2번 파이썬의 거듭제곱은 **로 표현합니다."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +189,7 @@
    "metadata": {},
    "source": [
     "[문제5]<br><br>\n",
-    "목과 나머지를 함께 구하기 위해 사용할 수 있는 표현을 골라주세요\n",
+    "몫과 나머지를 함께 구하기 위해 사용할 수 있는 표현을 골라주세요\n",
     "\n",
     "1. //\n",
     "2. divmod()\n",
@@ -184,7 +207,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "divmod()입니다.\n",
+    "\n",
+    "divmod(num1, num2)를 사용하면 divmod(몫, 나머지)로 반환됩니다."
+   ]
   }
  ],
  "metadata": {
