--- a/Python/assignment/1일차/Ch04_task(code).ipynb
+++ b/Python/assignment/1일차/Ch04_task(code).ipynb
@@ -45,26 +45,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "74wtVQFFc_h1",
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
+     "elapsed": 594,
      "status": "ok",
      "timestamp": 1728876298765,
-     "user_tz": -540,
-     "elapsed": 594,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "74wtVQFFc_h1",
     "outputId": "ea701550-6823-4d8e-948f-4215e6e1bb3d"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "BMI : 28.39506172839506\n"
      ]
@@ -100,26 +100,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "9kvBxa6PdhgA",
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
+     "elapsed": 514,
      "status": "ok",
      "timestamp": 1728876135185,
-     "user_tz": -540,
-     "elapsed": 514,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "9kvBxa6PdhgA",
     "outputId": "09716645-b281-4b3d-b0bf-e952ce66faba"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "15.811388300841896cm\n"
      ]
@@ -155,23 +155,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "43PidxmV7SZd",
     "executionInfo": {
+     "elapsed": 488,
      "status": "ok",
      "timestamp": 1728876232618,
-     "user_tz": -540,
-     "elapsed": 488,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "43PidxmV7SZd",
     "outputId": "f7c11e97-c347-4483-e4a1-352adefc54ea"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "4612500원\n"
      ]
@@ -234,23 +234,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "_zxr7mf97SZe",
     "executionInfo": {
+     "elapsed": 470,
      "status": "ok",
      "timestamp": 1728876373543,
-     "user_tz": -540,
-     "elapsed": 470,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "_zxr7mf97SZe",
     "outputId": "3e3c7d3d-05eb-4564-de0d-619fc0a308fe"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "돌문을 여는 숫자 : 43\n"
      ]
@@ -292,23 +292,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "EU9lZQaP7SZe",
     "executionInfo": {
+     "elapsed": 462,
      "status": "ok",
      "timestamp": 1728876264326,
-     "user_tz": -540,
-     "elapsed": 462,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "EU9lZQaP7SZe",
     "outputId": "7e824a55-5ab3-4e91-e40b-ec0f8aafcf07"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "최소 무게 : 18kg\n"
      ]
@@ -347,23 +347,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "dW9mLGxR7SZe",
     "executionInfo": {
+     "elapsed": 618,
      "status": "ok",
      "timestamp": 1728877050070,
-     "user_tz": -540,
-     "elapsed": 618,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "dW9mLGxR7SZe",
     "outputId": "ec258dec-f759-4b51-ecdd-4b232cf06353"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "나무의 나이 : 172살\n"
      ]
@@ -399,23 +399,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "eBMLLdzm7SZe",
     "executionInfo": {
+     "elapsed": 607,
      "status": "ok",
      "timestamp": 1728877104135,
-     "user_tz": -540,
-     "elapsed": 607,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "eBMLLdzm7SZe",
     "outputId": "ac56b698-d323-434f-9c8d-92ac9bd59d5b"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "연못의 깊이 : 43.0\n"
      ]
@@ -446,23 +446,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "9QQGwG4y7SZf",
     "executionInfo": {
+     "elapsed": 593,
      "status": "ok",
      "timestamp": 1728879586630,
-     "user_tz": -540,
-     "elapsed": 593,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "9QQGwG4y7SZf",
     "outputId": "bcc8c688-7015-47bb-84b3-617e239595a1"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "사원 입구 비밀번호 : 541\n"
      ]
@@ -506,23 +506,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "mlsBW9CM7SZf",
     "executionInfo": {
+     "elapsed": 3,
      "status": "ok",
      "timestamp": 1728881051870,
-     "user_tz": -540,
-     "elapsed": 3,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "mlsBW9CM7SZf",
     "outputId": "ff77fbf4-b65d-4035-e8c2-a950af55bfba"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "동굴 비밀번호 : 6\n"
      ]
@@ -558,25 +558,31 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "2KkpjCrS7SZf",
     "executionInfo": {
+     "elapsed": 444,
      "status": "ok",
      "timestamp": 1728881069256,
-     "user_tz": -540,
-     "elapsed": 444,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
+    },
+    "id": "2KkpjCrS7SZf",
+    "jupyter": {
+     "is_executing": true
     },
     "outputId": "f37aadc7-1c64-41ce-c6b1-5d4f171c153d"
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "파도 한 번이 오는데 걸리는 평균 시간 : 15.0/s\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.13.0'(으)로 셀을 실행하려면 ipykernel 패키지가 필요합니다.\n",
+      "\u001b[1;31m다음 명령어를 실행하여 Python 환경에 'ipykernel'을(를) 설치합니다. \n",
+      "\u001b[1;31m 명령: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -585,7 +591,7 @@
     "wave = 20\n",
     "wavePerMin = min/wave\n",
     "wavePerSec = wavePerMin * 60\n",
-    "print(f'파도 한 번이 오는데 걸리는 평균 시간 : {wavePerSec}/s')"
+    "print(f'파도 한 번이 오는데 걸리는 평균 시간 : {wavePerSec}초')"
    ]
   },
   {
@@ -616,23 +622,23 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "gLMxvLsh7SZf",
     "executionInfo": {
+     "elapsed": 599,
      "status": "ok",
      "timestamp": 1728883059921,
-     "user_tz": -540,
-     "elapsed": 599,
      "user": {
       "displayName": "엄살둥이",
       "userId": "05652890156480138654"
-     }
+     },
+     "user_tz": -540
     },
+    "id": "gLMxvLsh7SZf",
     "outputId": "887869c2-38d5-4e31-9f27-4b898ec2798c"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "폭포의 높이 : 122.5m\n"
      ]
@@ -674,19 +680,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
-    "id": "VzqvZwQ27SZg",
     "ExecuteTime": {
      "end_time": "2024-10-14T05:25:06.122658Z",
      "start_time": "2024-10-14T05:25:06.113973Z"
-    }
+    },
+    "id": "VzqvZwQ27SZg"
    },
-   "source": [
-    "firstNum = 32\n",
-    "thirdNum = 128\n",
-    "password = thirdNum - firstNum\n",
-    "print(password)"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -696,7 +697,12 @@
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "firstNum = 32\n",
+    "thirdNum = 128\n",
+    "password = thirdNum - firstNum\n",
+    "print(password)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -736,8 +742,8 @@
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
-   "name": "python3",
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -749,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
