feat : Python 1일차 과제

--- a/Python/assignment/1일차/Ch04_task(code).ipynb
+++ b/Python/assignment/1일차/Ch04_task(code).ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -576,13 +576,10 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m'Python 3.13.0'(으)로 셀을 실행하려면 ipykernel 패키지가 필요합니다.\n",
-      "\u001b[1;31m다음 명령어를 실행하여 Python 환경에 'ipykernel'을(를) 설치합니다. \n",
-      "\u001b[1;31m 명령: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파도 한 번이 오는데 걸리는 평균 시간 : 15.0초\n"
      ]
     }
    ],
@@ -701,7 +698,7 @@
     "firstNum = 32\n",
     "thirdNum = 128\n",
     "password = thirdNum - firstNum\n",
-    "print(password)"
+    "print(f'비밀번호 : {password}')"
    ]
   },
   {
@@ -755,7 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
