feat : Python 1일차 과제

--- a/Python/assignment/1일차/Ch01.task.ipynb
+++ b/Python/assignment/1일차/Ch01.task.ipynb
@@ -94,8 +94,9 @@
     "\n",
     "    코드를 작성할 때 미리 타입을 직접 지정 해줍니다.\n",
     "    코드의 가독성이 뛰어나고 타입 에러로 인한 문제에 대해 안전성이 뛰어나다는 장점이 있지만\n",
-    "    코딩 시 매번 타입을 결정해 주는 번거로움이 있고 유연하지 못합니다.\n",
-    "    \n",
+    "    코딩 시 매번 타입을 결정해 줘야하는 번거로움이 있고 유연하지 못합니다.\n",
+    "<br>\n",
+    "\n",
     "2.동적 타입 언어(Python, JS, Ruby)\n",
     "\n",
     "    코드를 작성할 때 변수의 타입을 자동적으로 판단해서 지정해줍니다.\n",
@@ -141,13 +142,13 @@
     "    \n",
     "    y: float = 1.0\n",
     "    \n",
-    "x에는 1을 int로 할당하고 y는 1.0을 float으로 할당합니다\n",
+    "x에는 1을 int로 할당하고 y는 1.0을 float로 할당합니다\n",
     "\n",
     "<br>\n",
     "\n",
     "#### 모듈 사용 시\n",
     "\n",
-    "    from typing import List\n",
+    "    from typing import List (typing모듈의 List를 가져오겠다는 코드)\n",
     "    \n",
     "    def function(num: List[int]) -> float:\n",
     "    \n",
@@ -161,7 +162,7 @@
     "    \n",
     "    mypy \"파일명\" - 타입체크 실행\n",
     "    \n",
-    "    타입 오류가 있을 시 오류 메세지로 알려줌---"
+    "    타입 오류가 있을 시 오류 메세지로 알려줍니다."
    ]
   },
   {
@@ -266,11 +267,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "파이썬은 Garbage Collection을 지원합니다.\n",
+    "파이썬은 개발자의 편리를 위해 자동적으로 메모리를 관리해주는 Garbage Collection을 지원합니다.\n",
     "\n",
-    "Garbage Collection이란 메모리를 효율적으로 관리하기 위한 기능으로써\n",
+    "Reference Counting(참조 카운팅)방식을 사용해서 객체를 참조하는 변수가 몇 개인지 파악하는데\n",
     "\n",
-    "객체를 참조하는 변수가 0이면 다시는 사용하지 않을 객체라는 의미이므로\n",
+    "참조 카운트가 0이 되면 이 객체는 다시는 사용하지 않을 객체라는 의미이므로\n",
     "\n",
     "객체를 메모리에서 지워 메모리 누수를 방지해줍니다"
    ]
