--- a/Python/assignment/1일차/Ch04_task(code).ipynb
+++ b/Python/assignment/1일차/Ch04_task(code).ipynb
@@ -43,7 +43,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -59,8 +58,19 @@
      "user_tz": -540
     },
     "id": "74wtVQFFc_h1",
-    "outputId": "ea701550-6823-4d8e-948f-4215e6e1bb3d"
+    "outputId": "ea701550-6823-4d8e-948f-4215e6e1bb3d",
+    "ExecuteTime": {
+     "end_time": "2024-10-14T13:42:45.423919Z",
+     "start_time": "2024-10-14T13:42:45.420727Z"
+    }
    },
+   "source": [
+    "# 키가 180cm, 계산식은 m값이 필요하기 때문에 1.8m로 바꿔서 height에 할당\n",
+    "height = 1.8\n",
+    "weight = 92\n",
+    "BMI = weight/(height**2)\n",
+    "print(f'BMI : {BMI}')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -70,13 +80,7 @@
      ]
     }
    ],
-   "source": [
-    "# 키가 180cm, 계산식은 m값이 필요하기 때문에 1.8m로 바꿔서 height에 할당\n",
-    "height = 1.8\n",
-    "weight = 92\n",
-    "BMI = weight/(height**2)\n",
-    "print(f'BMI : {BMI}')"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
