--- a/Python/assignment/2일차/Chapter0508_과제(cs).ipynb
+++ b/Python/assignment/2일차/Chapter0508_과제(cs).ipynb
@@ -1,1 +1,207 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"WXEwMsfUct7U"},"source":["컴퓨터 기초 지식을 의미하는 CS(Computer science)는<br>\n","코딩 테스트와 함께 기술 면접에서 지원자에게 필수적으로 요구합니다.<br>\n","\n","수업 내용 중 기술 면접에 자주 나오는 질문 3가지와 기본적으로 알아야 할 내용 과제로 선정했습니다.<br>\n","\n","관련 내용에 대해서는 구글링 또는 관련 서적을 통해 상세히 공부하시고<br>\n","답변은 최대한 핵심만 담아 간결하게 작성해주세요<br>\n","\n","기술 블로그를 운영 중이신 경우<br>\n","답변 내용을 기술 블로그에 작성하신 후 링크를 답변에 남겨주셔도 됩니다.<br>"]},{"cell_type":"markdown","metadata":{"id":"qoyC9wF-3hvs"},"source":["-----"]},{"cell_type":"markdown","metadata":{"id":"rAD_O3Gmc_43"},"source":["[문제1]\n","\n","Python의 변수 할당 개념을 다른 언어와 비교해 설명해주세요\n"]},{"cell_type":"markdown","metadata":{},"source":[]},{"cell_type":"markdown","metadata":{},"source":["---"]},{"cell_type":"markdown","metadata":{"id":"3uK_auXYdgk2"},"source":["[문제2]\n","\n","Python의 실수형(float) 계산 시 오차가 발생하는 이유에 대해 간단히 설명해 주세요"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"9kvBxa6PdhgA"},"outputs":[],"source":[]},{"cell_type":"markdown","metadata":{},"source":["----"]},{"cell_type":"markdown","metadata":{"id":"2Jte2VLKdiPm"},"source":["[문제3]\n","\n","슬라이싱에 대해 간단히 설명해주세요"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"XJhvRO-2djBh"},"outputs":[],"source":[]}],"metadata":{"colab":{"authorship_tag":"ABX9TyP7YKA5FdtGggYfD74V7SMJ","provenance":[]},"kernelspec":{"display_name":"Python 3","name":"python3"},"language_info":{"name":"python"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "WXEwMsfUct7U"
+   },
+   "source": [
+    "컴퓨터 기초 지식을 의미하는 CS(Computer science)는<br>\n",
+    "코딩 테스트와 함께 기술 면접에서 지원자에게 필수적으로 요구합니다.<br>\n",
+    "\n",
+    "수업 내용 중 기술 면접에 자주 나오는 질문 3가지와 기본적으로 알아야 할 내용 과제로 선정했습니다.<br>\n",
+    "\n",
+    "관련 내용에 대해서는 구글링 또는 관련 서적을 통해 상세히 공부하시고<br>\n",
+    "답변은 최대한 핵심만 담아 간결하게 작성해주세요<br>\n",
+    "\n",
+    "기술 블로그를 운영 중이신 경우<br>\n",
+    "답변 내용을 기술 블로그에 작성하신 후 링크를 답변에 남겨주셔도 됩니다.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "qoyC9wF-3hvs"
+   },
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "rAD_O3Gmc_43"
+   },
+   "source": [
+    "[문제1]\n",
+    "\n",
+    "Python의 변수 할당 개념을 다른 언어와 비교해 설명해주세요\n"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T14:16:00.518280Z",
+     "start_time": "2024-10-15T14:16:00.513512Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from email.policy import strict\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "b = a\n",
+    "\n",
+    "#같은 객체를 공유한다\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(a is b)\n",
+    "\n",
+    "#b의 객체에 4를 추가 해줬는데 a의 값도 변했다\n",
+    "b.append(4)\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4519628672\n",
+      "4519628672\n",
+      "True\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "메모리는 크게 커널영역(운영체제가 사용)와 사용자영역으로 나뉘는데  \n",
+    "사용자 영역은 크게 데이터영역, 코드영역, 스택, 힙으로 나뉩니다.  \n",
+    "데이터영역에는 전역변수, 정적변수, 상수처럼 프로그램이 시작할 때부터 종료될 때까지 사용되는 데이터를 보관하고  \n",
+    "코드 영역에는 프로그램을 실행시킬 명령어를 저장합니다.  \n",
+    "<br>\n",
+    "\n",
+    "스택과 힙이 남았는데 여기서 언어끼리 차이를 보입니다.  \n",
+    "파이썬은 자바와 같이 변수명과 객체의 주소 정보를 스택에 저장하고 객체를 힙에 저장합니다.  \n",
+    "그리고 그 객체를 여러 변수가 같이 공유할 수 있습니다.  \n",
+    "저번에 다른 과제에서 객체를 참조하는 변수가 0일 경우 가비지 컬렉션에 의해 메모리 누수를 방지해준다고 얘기 했던 기억이 납니다.  \n",
+    "여튼 그래서 위의 코드와 같이 a에 리스트[1, 2, 3]을 만들고 b에 a를 할당하면 b는 a와 같은 객체의 주소를 갖게 됩니다.  \n",
+    "그래서 b의 값을 변경했을 때 a가 같이 변경되는 모습을 볼 수 있습니다.  \n",
+    "<br>\n",
+    "\n",
+    "다른 방식으로 변수를 할당하는 언어는 대표적으로 C와 C++가 있습니다.  \n",
+    "이 언어들은 변수를 할당할 때 변수에 직접 값을 저장한 다음에 메모리에 저장합니다.  \n",
+    "함수에서 사용되는 지역변수(함수 내에서만 사용할 수 있는 변수)나 매개변수 같은 경우가 스택에 저장되는데  \n",
+    "스택에 변수명과 변수의 객체 주소가 저장되는 파이썬이나 Java와는 차이를 보이는 부분입니다.\n",
+    "그러면 C나 C++은 힙에 뭘 저장할까요?  \n",
+    "바로 동적 할당 변수를 저장합니다.  \n",
+    "동적 할당 변수는 컴파일 시 크기가 정해진 정적 할당 변수와 달리  \n",
+    "런타임(프로그램 실행 중) 시 필요한 만큼의 저장 공간을 메모리에 할당하는 변수를 말합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "3uK_auXYdgk2"
+   },
+   "source": [
+    "[문제2]\n",
+    "\n",
+    "Python의 실수형(float) 계산 시 오차가 발생하는 이유에 대해 간단히 설명해 주세요"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "컴퓨터는 실수를 부동 소수점 방식으로 표현합니다.  \n",
+    "부동 소수점 방식이란 말 그대로 소수점을 움직이는 방식입니다.  \n",
+    "부동 소수점은 10진수의 경우 m(가수)x10^n(지수)의 꼴로 나타내는데\n",
+    "예를 들어 100.4 라는 실수가 있을 때 부동 소수점 방식으로 1.004 x 10^2 또는 1004.0 x 10^-1로 표현할 수 있습니다.  \n",
+    "우리는 평소에 10진수를 사용하지만 오늘날 컴퓨터는 2진수의 부동 소수점(1.m x 2^n)으로 실수를 저장합니다.  \n",
+    "문제는 여기서 발생합니다.  \n",
+    "0.3의 경우 m x 3^의 꼴로 나타내고 싶다면 1 x 3^-1로 값이 딱 맞아 떨어지게 표현할 수 있습니다.  \n",
+    "하지만 10진수를 사용한 m x 10^n으로 표현한다면 0.333333...처럼 3이 무한히 반복되는 순환소수가 됩니다.\n",
+    "이와 같은 문제가 10진수와 2진수 사이에서도 나타납니다.  \n",
+    "10진수 0.1은 1x10^-1로 간단하게 표현할 수 있지만 1.m x 2^n으로 표현하면 무한하거나 무한에 가까운 소수가 됩니다.  \n",
+    "하지만 컴퓨터의 공간은 한정적이고 무한히 많은 소수를 저장할 수 없습니다.  \n",
+    "때문에 소수점을 중간에 생략하게 되는데 이로 인해 오차가 발생하게 됩니다.  \n",
+    "<br>\n",
+    "\n",
+    "##### TMI  \n",
+    "파이썬은 실수 타입이 float 하나 밖에 없습니다.\n",
+    "Java에서는 float, double 타입이 있는데 float은 32비트르 이용한 부동 소수점 방식을 사용하고  \n",
+    "double은 64비트를 이용한 부동 소수점 방식을 사용합니다. 이름도 double인 이유가 float의 2배이기 때문입니다.\n",
+    "파이썬의 float은 64비트를 사용하기 때문에 double과 같은 저장 공간을 가지고 있습니다.  \n",
+    "그럼 메모리 효율을 위해 32비트를 써야할 때도 있을텐데 못쓰는 걸까요?\n",
+    "구글링해보니 array, struct 모듈 그리고 numpy라이브러리를 통해 32비트로 타입을 지정해줄 수 있는 방식이 있었습니다.  \n",
+    "<br>\n",
+    "2진수로 표현하는 부동 소수점 방식의 가수에는 왜 1이 들어갈까요?  \n",
+    "오늘날 컴퓨터는 IEEE 754 방식으로 실수를 저장합니다.  \n",
+    "32비트 => 부호(플래그에서 양수인지 음수인지 판단해주기 위함, 1bit), 지수(8bit), 가수(23bit)  \n",
+    "64비트 => 부호(0이면 음수 1이면 양수, 1bit), 지수(11bit), 가수(52bit)  \n",
+    "이런 방식으로요!!  \n",
+    "여기서 가수의 정수부에 1로 통일된 정규화한 수를 IEEE에서 지정해놓은 겁니다.  \n",
+    "이유가 궁금하면 구글링하면 나옵니다.\n",
+    "\n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "----"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "2Jte2VLKdiPm"
+   },
+   "source": [
+    "[문제3]\n",
+    "\n",
+    "슬라이싱에 대해 간단히 설명해주세요"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "파이썬에서 슬라이싱이란 문자열을 잘라 가져오는 것을 의미합니다.  \n",
+    "ex)  \n",
+    "x = \"나는 짱이다\"  \n",
+    "x[start index : end index : step]  \n",
+    "start index부터 end index 바로 앞의 index까지 step만큼 건너뛰면서 잘라냅니다."
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyP7YKA5FdtGggYfD74V7SMJ",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "name": "python3",
+   "language": "python"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
