feat : Python 2일차 과제

--- a/Python/assignment/2일차/Ch05_task.ipynb
+++ b/Python/assignment/2일차/Ch05_task.ipynb
@@ -44,7 +44,7 @@
     "4번\n",
     "\n",
     "1번과 2번은 값이 같은지 비교하는 연산자  \n",
-    "3번은 number의 인자로 7을 쓰겠다는 의미"
+    "3번은 number의 인자로 7을 쓰겠다는 의미입니다."
    ]
   },
   {
