--- a/Python/assignment/2일차/Ch07_task.ipynb
+++ b/Python/assignment/2일차/Ch07_task.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "2,3 번\n",
     "\n",
-    "파이썬 문법에 따르면 true는 bool 타입이 아닙니다\n",
+    "파이썬 문법에 따르면 true는 bool 타입이 아닙니다.\n",
     "\n",
     "또 문제에서 1이나 0이 bool타입인 것이 참이 되려면 bool(1)이나 bool(0)으로 객관식이 나왔어야합니다.\n",
     "\n",
