--- a/Python/assignment/2일차/Ch08_task.ipynb
+++ b/Python/assignment/2일차/Ch08_task.ipynb
@@ -43,7 +43,7 @@
     "4번\n",
     "\n",
     "4 * 2.0의 결과는 float타입 입니다.  \n",
-    "정수 8과 is로 비교해보면 False가 나와야합니다"
+    "정수 8과 is로 비교해보면 False가 나와야합니다."
    ]
   },
   {
