--- a/Python/assignment/2일차/Chapter0508_과제.ipynb
+++ b/Python/assignment/2일차/Chapter0508_과제.ipynb
@@ -106,7 +106,7 @@
     "#join과 split을 이용 / split으로 -을 빼고 리스트로 반환 후 join을 통해 다시 리스트를 문자열로 바꾸는데 구분자는 공란으로 둠\n",
     "print(''.join(전화번호.split('-')))\n",
     "\n",
-    "#replace함수로도 쉽게 변환이 가능하다\n",
+    "#replace함수로도 쉽게 변환이 가능합니다\n",
     "print(전화번호.replace('-', ''))"
    ],
    "outputs": [
