✨ Feat : Python 1차 쪽지시험
feat : Python 1차 쪽지시험

--- a/Python/assignment/4일차/chapter1~2(easy_quiz).ipynb
+++ b/Python/assignment/4일차/chapter1~2(easy_quiz).ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.020070Z",
-     "start_time": "2024-10-17T08:36:34.016950Z"
+     "end_time": "2024-10-17T09:05:15.007985Z",
+     "start_time": "2024-10-17T09:05:15.003227Z"
     }
    },
    "cell_type": "code",
@@ -32,7 +32,7 @@
    ],
    "id": "8e5a1ab9c30b38a7",
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.065857Z",
-     "start_time": "2024-10-17T08:36:34.060438Z"
+     "end_time": "2024-10-17T09:05:15.094966Z",
+     "start_time": "2024-10-17T09:05:15.088076Z"
     }
    },
    "cell_type": "code",
@@ -68,7 +68,7 @@
      ]
     }
    ],
-   "execution_count": 49
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.109212Z",
-     "start_time": "2024-10-17T08:36:34.104255Z"
+     "end_time": "2024-10-17T09:05:15.360861Z",
+     "start_time": "2024-10-17T09:05:15.356069Z"
     }
    },
    "cell_type": "code",
@@ -105,7 +105,7 @@
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.162604Z",
-     "start_time": "2024-10-17T08:36:34.159138Z"
+     "end_time": "2024-10-17T09:05:15.479783Z",
+     "start_time": "2024-10-17T09:05:15.474864Z"
     }
    },
    "cell_type": "code",
@@ -138,7 +138,7 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.203324Z",
-     "start_time": "2024-10-17T08:36:34.198313Z"
+     "end_time": "2024-10-17T09:05:15.623826Z",
+     "start_time": "2024-10-17T09:05:15.614725Z"
     }
    },
    "cell_type": "code",
@@ -173,7 +173,7 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -187,8 +187,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.268343Z",
-     "start_time": "2024-10-17T08:36:34.264611Z"
+     "end_time": "2024-10-17T09:05:15.794256Z",
+     "start_time": "2024-10-17T09:05:15.789131Z"
     }
    },
    "cell_type": "code",
@@ -208,7 +208,7 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -228,8 +228,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.308217Z",
-     "start_time": "2024-10-17T08:36:34.302696Z"
+     "end_time": "2024-10-17T09:05:15.922547Z",
+     "start_time": "2024-10-17T09:05:15.917364Z"
     }
    },
    "cell_type": "code",
@@ -248,7 +248,7 @@
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -264,8 +264,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:34.384093Z",
-     "start_time": "2024-10-17T08:36:34.377877Z"
+     "end_time": "2024-10-17T09:05:16.025970Z",
+     "start_time": "2024-10-17T09:05:16.006583Z"
     }
    },
    "cell_type": "code",
@@ -288,7 +288,7 @@
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -303,8 +303,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:37.843327Z",
-     "start_time": "2024-10-17T08:36:34.415683Z"
+     "end_time": "2024-10-17T09:05:20.268624Z",
+     "start_time": "2024-10-17T09:05:16.107662Z"
     }
    },
    "cell_type": "code",
@@ -333,14 +333,14 @@
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 10
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
     "## 문제 10\n",
-    "### 5년이 지났습니다\n",
+    "### 10000년이 지났습니다\n",
     "### 우리 도마뱀들이 너무 커서 사육장을 분리해야해요!\n",
     "### 딕셔너리로 나누었던 것을 사육장1, 2, 3 `리스트`로 변경하고\n",
     "### 각 도마뱀들을 넣어주세요!"
@@ -350,14 +350,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T08:36:38.034885Z",
-     "start_time": "2024-10-17T08:36:38.029631Z"
+     "end_time": "2024-10-17T09:05:43.121633Z",
+     "start_time": "2024-10-17T09:05:43.113642Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 정답 입력\n",
-    "분리_사육장 = [{ i : j } for i, j in after_year사육장.items()] # 임시 사육장에 귀요미들을 각각 분리해서 담아준다\n",
+    "분리_사육장 = [{ i : j } for i, j in any_year사육장.items()] # 임시 사육장에 귀요미들을 각각 분리해서 담아준다\n",
     "\n",
     "임시_사육장, 사육장1, 사육장2, 사육장3 = [], [], [], [] # 사육장들 생성\n",
     "\n",
@@ -365,8 +365,10 @@
     "while i < len(분리_사육장): # 같은 공간에서 분리돼있던 귀요미들을 임시 사육장으로 옮긴다 \n",
     "    임시_사육장.append(분리_사육장[i])\n",
     "    i += 1\n",
-    "    \n",
+    "\n",
+    "print(임시_사육장)    \n",
     "사육장1, 사육장2, 사육장3 = 임시_사육장 # 임시 사육장에 있는 귀요미들을 각 사육장으로 옮겨준다\n",
+    "\n",
     "print(list(사육장1)) # 나이를 볼 수 없어서 슬프지만 문제대로 사육장 1~3을 리스트로 변경한다\n",
     "print(list(사육장2))\n",
     "print(list(사육장3)) \n"
@@ -377,13 +379,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[{'덩치': 10002}, {'애기': 10003}, {'마고': 10003}]\n",
       "['덩치']\n",
       "['애기']\n",
       "['마고']\n"
      ]
     }
    ],
-   "execution_count": 57
+   "execution_count": 12
   },
   {
    "metadata": {},
