✨ Feat : Python 4일차 과제
feat : Python 4일차 과제

--- a/Python/assignment/4일차/Chapter1416_과제.ipynb
+++ b/Python/assignment/4일차/Chapter1416_과제.ipynb
@@ -40,8 +40,8 @@
    "metadata": {
     "id": "juUF2KYbu0DX",
     "ExecuteTime": {
-     "end_time": "2024-10-17T09:31:25.946371Z",
-     "start_time": "2024-10-17T09:31:25.941701Z"
+     "end_time": "2024-10-17T15:55:29.838345Z",
+     "start_time": "2024-10-17T15:55:29.834741Z"
     }
    },
    "source": [
@@ -61,7 +61,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 274
   },
   {
    "cell_type": "markdown",
@@ -90,8 +90,8 @@
    "metadata": {
     "id": "P0fY7CYUvC_j",
     "ExecuteTime": {
-     "end_time": "2024-10-17T09:39:00.606461Z",
-     "start_time": "2024-10-17T09:39:00.601665Z"
+     "end_time": "2024-10-17T15:55:31.801564Z",
+     "start_time": "2024-10-17T15:55:31.797375Z"
     }
    },
    "source": [
@@ -114,7 +114,7 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 275
   },
   {
    "cell_type": "markdown",
@@ -166,8 +166,8 @@
    "metadata": {
     "id": "2NmqRFgDvFtz",
     "ExecuteTime": {
-     "end_time": "2024-10-17T09:52:28.050103Z",
-     "start_time": "2024-10-17T09:52:28.046003Z"
+     "end_time": "2024-10-17T15:55:39.457838Z",
+     "start_time": "2024-10-17T15:55:39.453443Z"
     }
    },
    "source": [
@@ -190,7 +190,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 276
   },
   {
    "cell_type": "markdown",
@@ -221,8 +221,8 @@
    "metadata": {
     "id": "ujiXrEhJvIV0",
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:19:55.308031Z",
-     "start_time": "2024-10-17T11:19:55.303096Z"
+     "end_time": "2024-10-17T15:55:41.689862Z",
+     "start_time": "2024-10-17T15:55:41.685807Z"
     }
    },
    "source": [
@@ -245,7 +245,7 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 277
   },
   {
    "cell_type": "markdown",
@@ -282,8 +282,8 @@
    "metadata": {
     "id": "EULD-IOrvKmG",
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:37:03.734870Z",
-     "start_time": "2024-10-17T11:37:03.729931Z"
+     "end_time": "2024-10-17T15:55:44.051228Z",
+     "start_time": "2024-10-17T15:55:44.047362Z"
     }
    },
    "cell_type": "code",
@@ -308,7 +308,7 @@
      ]
     }
    ],
-   "execution_count": 92
+   "execution_count": 278
   },
   {
    "cell_type": "markdown",
@@ -340,8 +340,8 @@
    "metadata": {
     "id": "e4LXat3BvRRg",
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:57:06.991538Z",
-     "start_time": "2024-10-17T11:57:06.987775Z"
+     "end_time": "2024-10-17T15:55:46.560162Z",
+     "start_time": "2024-10-17T15:55:46.557028Z"
     }
    },
    "source": [
@@ -358,7 +358,7 @@
      ]
     }
    ],
-   "execution_count": 95
+   "execution_count": 279
   },
   {
    "cell_type": "markdown",
@@ -386,8 +386,8 @@
    "metadata": {
     "id": "598DAkIHvQav",
     "ExecuteTime": {
-     "end_time": "2024-10-17T12:06:40.243015Z",
-     "start_time": "2024-10-17T12:06:40.239352Z"
+     "end_time": "2024-10-17T15:55:48.834044Z",
+     "start_time": "2024-10-17T15:55:48.830620Z"
     }
    },
    "source": [
@@ -406,7 +406,7 @@
      ]
     }
    ],
-   "execution_count": 117
+   "execution_count": 280
   },
   {
    "cell_type": "markdown",
@@ -443,8 +443,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T14:43:39.922833Z",
-     "start_time": "2024-10-17T14:43:39.919826Z"
+     "end_time": "2024-10-17T16:01:07.044180Z",
+     "start_time": "2024-10-17T16:01:07.040288Z"
     }
    },
    "source": [
@@ -464,7 +464,7 @@
      ]
     }
    ],
-   "execution_count": 256
+   "execution_count": 294
   },
   {
    "cell_type": "markdown",
@@ -484,8 +484,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T12:27:55.116334Z",
-     "start_time": "2024-10-17T12:27:49.890874Z"
+     "end_time": "2024-10-17T15:56:48.918795Z",
+     "start_time": "2024-10-17T15:56:34.343503Z"
     }
    },
    "source": [
@@ -499,11 +499,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'팥붕어빵': 2, '슈크림붕어빵': 2, '초코붕어빵': 2}\n"
+      "{'팥붕어빵': 1, '슈크림붕어빵': 2, '초코붕어빵': 3}\n"
      ]
     }
    ],
-   "execution_count": 203
+   "execution_count": 283
   },
   {
    "cell_type": "markdown",
@@ -528,8 +528,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T12:27:59.517888Z",
-     "start_time": "2024-10-17T12:27:59.513832Z"
+     "end_time": "2024-10-17T15:56:53.422522Z",
+     "start_time": "2024-10-17T15:56:53.418836Z"
     }
    },
    "cell_type": "code",
@@ -547,12 +547,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "재고가 모자랍니다.\n",
-      "남은 재고 : {'팥붕어빵': 4, '슈크림붕어빵': 2, '초코붕어빵': 1}\n"
+      "남은 재고 : {'팥붕어빵': 9, '슈크림붕어빵': 6, '초코붕어빵': 2}\n"
      ]
     }
    ],
-   "execution_count": 206
+   "execution_count": 284
   },
   {
    "cell_type": "markdown",
@@ -572,13 +571,12 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T15:42:21.589544Z",
-     "start_time": "2024-10-17T15:42:09.842770Z"
+     "end_time": "2024-10-17T16:01:44.189193Z",
+     "start_time": "2024-10-17T16:01:11.518946Z"
     }
    },
    "source": [
     "while True:\n",
-    "    print(f'남은 재고 : {fish}')\n",
     "    order_menu = input(\"메뉴판(팥붕어빵, 슈크림붕어빵, 초코붕어빵) 쉼표로 구분해서 주문할 것\").split(',')\n",
     "    \n",
     "    if \"종료\" in order_menu:\n",
@@ -598,11 +596,13 @@
     "    for i in order_menu:\n",
     "        if order[i] <= fish[i]:\n",
     "            fish[i] -= order[i]\n",
-    "            print(f'{i}가 {order[i]}개 판매되었습니다. ')\n",
+    "            print(f'{i}이 {order[i]}개 판매되었습니다. ')\n",
     "        elif order[i] > fish[i]:\n",
     "            print(\"재고가 모자랍니다.\")\n",
     "            break\n",
-    "        \n",
+    "    \n",
+    "    print(f'남은 재고 : {fish}')\n",
+    "    print()\n",
     "            "
    ],
    "outputs": [
@@ -610,27 +610,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "남은 재고 : {'팥붕어빵': 8, '슈크림붕어빵': 6, '초코붕어빵': 3}\n",
-      "팥붕어빵가 2개 판매되었습니다. \n",
-      "슈크림붕어빵가 2개 판매되었습니다. \n",
-      "남은 재고 : {'팥붕어빵': 6, '슈크림붕어빵': 4, '초코붕어빵': 3}\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[269], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m      2\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m남은 재고 : \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfish\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m     order_menu \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m메뉴판(팥붕어빵, 슈크림붕어빵, 초코붕어빵) 쉼표로 구분해서 주문할 것\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39msplit(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m,\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m종료\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;129;01min\u001B[39;00m order_menu:\n\u001B[1;32m      6\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m종료되었습니다.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel/kernelbase.py:1282\u001B[0m, in \u001B[0;36mKernel.raw_input\u001B[0;34m(self, prompt)\u001B[0m\n\u001B[1;32m   1280\u001B[0m     msg \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mraw_input was called, but this frontend does not support input requests.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   1281\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m StdinNotImplementedError(msg)\n\u001B[0;32m-> 1282\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_input_request\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m   1283\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mstr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mprompt\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1284\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_parent_ident\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mshell\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1285\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_parent\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mshell\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1286\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpassword\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m   1287\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel/kernelbase.py:1325\u001B[0m, in \u001B[0;36mKernel._input_request\u001B[0;34m(self, prompt, ident, parent, password)\u001B[0m\n\u001B[1;32m   1322\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m:\n\u001B[1;32m   1323\u001B[0m     \u001B[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001B[39;00m\n\u001B[1;32m   1324\u001B[0m     msg \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInterrupted by user\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m-> 1325\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m(msg) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m   1326\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m:\n\u001B[1;32m   1327\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlog\u001B[38;5;241m.\u001B[39mwarning(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInvalid Message:\u001B[39m\u001B[38;5;124m\"\u001B[39m, exc_info\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: Interrupted by user"
+      "팥붕어빵이 2개 판매되었습니다. \n",
+      "슈크림붕어빵이 1개 판매되었습니다. \n",
+      "초코붕어빵이 1개 판매되었습니다. \n",
+      "남은 재고 : {'팥붕어빵': 8, '슈크림붕어빵': 7, '초코붕어빵': 4}\n",
+      "\n",
+      "팥붕어빵이 2개 판매되었습니다. \n",
+      "슈크림붕어빵이 1개 판매되었습니다. \n",
+      "남은 재고 : {'팥붕어빵': 6, '슈크림붕어빵': 6, '초코붕어빵': 4}\n",
+      "\n",
+      "종료되었습니다.\n"
      ]
     }
    ],
-   "execution_count": 269
+   "execution_count": 295
   },
   {
    "metadata": {},
@@ -649,8 +642,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T15:46:18.242293Z",
-     "start_time": "2024-10-17T15:45:59.166686Z"
+     "end_time": "2024-10-17T16:02:23.475712Z",
+     "start_time": "2024-10-17T16:01:55.868611Z"
     }
    },
    "cell_type": "code",
@@ -677,18 +670,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "현재 재고 : {'팥붕어빵': 11, '슈크림붕어빵': 6, '초코붕어빵': 3}\n",
-      "팥붕어빵이(가) 2개 추가되었습니다.\n",
-      "슈크림붕어빵이(가) 2개 추가되었습니다.\n",
-      "초코붕어빵이(가) 2개 추가되었습니다.\n",
-      "현재 재고 : {'팥붕어빵': 13, '슈크림붕어빵': 8, '초코붕어빵': 5}\n",
-      "팥붕어빵이(가) 1개 추가되었습니다.\n",
-      "현재 재고 : {'팥붕어빵': 14, '슈크림붕어빵': 8, '초코붕어빵': 5}\n",
+      "현재 재고 : {'팥붕어빵': 6, '슈크림붕어빵': 6, '초코붕어빵': 4}\n",
+      "팥붕어빵이 10개 추가되었습니다.\n",
+      "슈크림붕어빵이 10개 추가되었습니다.\n",
+      "초코붕어빵이 10개 추가되었습니다.\n",
+      "현재 재고 : {'팥붕어빵': 16, '슈크림붕어빵': 16, '초코붕어빵': 14}\n",
       "종료되었습니다.\n"
      ]
     }
    ],
-   "execution_count": 271
+   "execution_count": 297
   },
   {
    "cell_type": "markdown",
@@ -719,8 +710,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T15:32:00.279612Z",
-     "start_time": "2024-10-17T15:31:38.668526Z"
+     "end_time": "2024-10-17T16:02:52.160793Z",
+     "start_time": "2024-10-17T16:02:29.246129Z"
     }
    },
    "source": [
@@ -777,24 +768,16 @@
       "남은 재고 : {'팥붕어빵': 8, '슈크림붕어빵': 6, '초코붕어빵': 3}\n",
       "판매된 붕어빵 : {'팥붕어빵': 2, '슈크림붕어빵': 2, '초코붕어빵': 2}\n",
       "붕어빵 매출 : 7400원\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[268], line 15\u001B[0m\n\u001B[1;32m     12\u001B[0m total_price \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m---> 15\u001B[0m     order_menu \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m메뉴판(팥붕어빵, 슈크림붕어빵, 초코붕어빵) 쉼표로 구분해서 주문할 것\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39msplit(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m,\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;66;03m# 메뉴 입력\u001B[39;00m\n\u001B[1;32m     17\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m종료\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;129;01min\u001B[39;00m order_menu: \u001B[38;5;66;03m#종료\u001B[39;00m\n\u001B[1;32m     18\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m종료되었습니다.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel/kernelbase.py:1282\u001B[0m, in \u001B[0;36mKernel.raw_input\u001B[0;34m(self, prompt)\u001B[0m\n\u001B[1;32m   1280\u001B[0m     msg \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mraw_input was called, but this frontend does not support input requests.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   1281\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m StdinNotImplementedError(msg)\n\u001B[0;32m-> 1282\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_input_request\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m   1283\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mstr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mprompt\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1284\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_parent_ident\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mshell\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1285\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_parent\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mshell\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1286\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpassword\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m   1287\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/ipykernel/kernelbase.py:1325\u001B[0m, in \u001B[0;36mKernel._input_request\u001B[0;34m(self, prompt, ident, parent, password)\u001B[0m\n\u001B[1;32m   1322\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m:\n\u001B[1;32m   1323\u001B[0m     \u001B[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001B[39;00m\n\u001B[1;32m   1324\u001B[0m     msg \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInterrupted by user\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m-> 1325\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyboardInterrupt\u001B[39;00m(msg) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m   1326\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m:\n\u001B[1;32m   1327\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mlog\u001B[38;5;241m.\u001B[39mwarning(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInvalid Message:\u001B[39m\u001B[38;5;124m\"\u001B[39m, exc_info\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: Interrupted by user"
+      "\n",
+      "남은 재고 : {'팥붕어빵': 7, '슈크림붕어빵': 6, '초코붕어빵': 3}\n",
+      "판매된 붕어빵 : {'팥붕어빵': 1}\n",
+      "붕어빵 매출 : 8400원\n",
+      "\n",
+      "종료되었습니다.\n"
      ]
     }
    ],
-   "execution_count": 268
+   "execution_count": 298
   }
  ],
  "metadata": {
