✨ Feat : Python 5일차 과제
feat : Python 5일차 과제

--- a/Python/assignment/5일차/Chapter1720_과제.ipynb
+++ b/Python/assignment/5일차/Chapter1720_과제.ipynb
@@ -351,6 +351,14 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "자바에서는 생성자\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -404,8 +412,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T07:00:17.875798Z",
-     "start_time": "2024-10-18T07:00:17.871472Z"
+     "end_time": "2024-10-18T12:27:33.319148Z",
+     "start_time": "2024-10-18T12:27:33.314247Z"
     }
    },
    "source": [
@@ -435,7 +443,7 @@
      ]
     }
    ],
-   "execution_count": 84
+   "execution_count": 152
   },
   {
    "cell_type": "markdown",
@@ -452,8 +460,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T05:42:28.411956Z",
-     "start_time": "2024-10-18T05:42:28.407335Z"
+     "end_time": "2024-10-18T12:27:37.375675Z",
+     "start_time": "2024-10-18T12:27:37.358528Z"
     }
    },
    "source": [
@@ -473,16 +481,18 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "팥붕어빵 10개\n",
-      "슈크림붕어빵 8개\n",
-      "초코붕어빵 5개\n"
+     "ename": "AttributeError",
+     "evalue": "'BungeoppangShop' object has no attribute 'check_stock'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[153], line 12\u001B[0m\n\u001B[1;32m      9\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstock[i]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m개\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# ppang = BungeoppangShop(stock, prices, sales)\u001B[39;00m\n\u001B[0;32m---> 12\u001B[0m \u001B[43mppang\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_stock\u001B[49m()\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'BungeoppangShop' object has no attribute 'check_stock'"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 153
   },
   {
    "cell_type": "markdown",
@@ -499,8 +509,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-18T06:16:28.020353Z",
-     "start_time": "2024-10-18T06:16:23.329230Z"
+     "end_time": "2024-10-18T12:11:42.099404Z",
+     "start_time": "2024-10-18T12:11:34.413146Z"
     }
    },
    "source": [
@@ -541,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "팥붕어빵이 1개 판매되었습니다.\n",
+      "팥붕어빵이 2개 판매되었습니다.\n",
       "총 판매량 : {'팥붕어빵': 2, '슈크림붕어빵': 0, '초코붕어빵': 0}\n",
       "팥붕어빵 8개\n",
       "슈크림붕어빵 8개\n",
@@ -549,7 +559,7 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 150
   },
   {
    "cell_type": "markdown",
@@ -696,6 +706,7 @@
     "            total_sales += self.sales[i] * prices[i]\n",
     "        print(f'총 매출은 : {total_sales}원 입니다.')\n",
     "        \n",
+    "        \n",
     "ppang = BungeoppangShop(stock, prices, sales)\n",
     "ppang.process_order(input(\"메뉴를 입력해주세요(메뉴판 | 팥붕어빵, 슈크림붕어빵, 초코붕어빵\"), input(\"메뉴 개수를 입력해주세요\")) # 메뉴와 개수 입력\n",
     "ppang.calculate_total_sales()\n",
@@ -721,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[과제 8: 메인 함수 main]\n",
+    "[과제 7: 메인 함수 main]\n",
     "\n",
     "목표: main 함수를 작성하여 프로그램의 주요 로직을 실행합니다.\n",
     "\n",
