✨ 리눅스 2일차 과제
저장을 안해서 다시 커밋

--- a/Linux/linux_1426.ipynb
+++ b/Linux/linux_1426.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : 4  \n",
+    "\n",
+    "ls만 입력하면 현재 작업 디렉토리의 내용을 나열한다."
    ]
   },
   {
@@ -49,7 +51,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : rm  \n",
+    "\n",
+    "remove의 약자 파일을 제거한다.  \n",
+    "폴더를 제거하고 싶으면 -r옵션을 사용하면 된다."
    ]
   },
   {
@@ -63,7 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : locate  \n",
+    "\n",
+    "비슷한 커맨드로 find가 있지만 find는 데이터베이스를 검색해서 출력해주지 않는다."
    ]
   },
   {
@@ -82,7 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : 2  \n",
+    "\n",
+    "locate는 db를 사용하여 검색하기에 find보다 빠르다.  \n",
+    "find의 옵션이 더 많다.  \n",
+    "updatedb로 업데이트 해주지 않으면 부정확한 데이터를 출력할 가능성이 있다.  \n",
+    "find는 검색한 파일or디렉토리를 삭제할 수도 있다."
    ]
   },
   {
@@ -100,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 : "
+    "정답 : touch oz"
    ]
   },
   {
@@ -114,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : mkdir {2023..2024}_{01..12}"
    ]
   },
   {
@@ -128,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : cp index.html admin.html"
    ]
   },
   {
@@ -148,7 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : mv  \n",
+    "\n",
+    "move의 약자"
    ]
   },
   {
@@ -162,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정답 :"
+    "정답 : nano oz.txt, vi oz.txt"
    ]
   }
  ],
